<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login_email">Username or Email</string>
    <string name="login_password">password</string>
    <string name="login">login</string>
    <string name="login_facebook">login with facebook</string>
    <string name="login_twitter">login with twitter</string>
    <string name="login_google">login with google</string>
    <string name="or">OR</string>
</resources>