<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding">

        <EditText
            android:id="@+id/name"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:hint="@string/login_email"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email"
            style="@style/TextStyle"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:hint="@string/login_password"
            app:layout_constraintTop_toBottomOf="@+id/name"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/password"
            style="@style/TextStyle"
            android:inputType="numberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:hint="@string/login_password"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:layout_editor_absoluteX="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_height"
            android:layout_marginTop="@dimen/default_margin"
            android:backgroundTint="@color/color_orange"
            android:text="@string/login"
            android:textColor="@color/color_white"
            app:cornerRadius="@dimen/default_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <View
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/color_divider"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            android:text="@string/or"
            app:layout_constraintBottom_toBottomOf="@+id/view3"
            app:layout_constraintEnd_toStartOf="@+id/view4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/view3"
            app:layout_constraintTop_toTopOf="@+id/view3" />

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/color_divider"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialButton" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/materialButton2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_height"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/color_orange"
            android:text="@string/login_facebook"
            android:textColor="@color/color_white"
            app:cornerRadius="@dimen/default_radius"
            android:drawableLeft="@drawable/facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/materialButton3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_height"
            android:layout_marginTop="@dimen/default_margin"
            android:backgroundTint="@color/color_orange"
            android:text="@string/login_twitter"
            android:textColor="@color/color_white"
            app:cornerRadius="@dimen/default_radius"
            android:drawableLeft="@drawable/twitter"
            app:iconSize="23dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialButton2" />

        <com.google.android.material.button.MaterialButton

            android:layout_width="match_parent"
            android:layout_height="@dimen/login_height"
            android:layout_marginTop="@dimen/default_margin"
            android:backgroundTint="@color/color_orange"
            android:text="@string/login_google"
            android:textColor="@color/color_white"
            app:cornerRadius="@dimen/default_radius"
            android:icon="@drawable/google"
            app:iconSize="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialButton3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <RelativeLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/color_black_transparent">
        <ProgressBar
            android:layout_centerInParent="true"
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>